[metadata]
name = img2segy
version = attr: img2segy.version.__version__
description = A tool for converting images to SEG-Y
long_description = file: README.rst, LICENSE.txt
long_description_content_type = text/x-rst
url = https://github.com/sixty-north/img2segy
author = Sixty North AS
author_email: systems+img2segy@sixty-north.com
keywords = seismic image-processing geocomputing geophysics
license = GNU Affero General Public License v3
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = False
package_dir =
    =src
packages = find:
install_requires =
    click>=8.1.3
    euclidian>=0.9.2
    exit_codes>=1.3.0
    numpy>=1.23.2
    segpy>=2.1.0
    toml>=0.10.2

[options.extras_require]
dev = black ; bumpversion ; twine ; build
doc = sphinx ; sphinx_rtd_theme ; better_apidoc
test = pytest ; hypothesis ; tox


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    img2segy = img2segy.cli:cli
